# galeriafora

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: architecture.md
src/galeriafora/: __init__.py
src/galeriafora/application/: __init__.py  media_fetcher.py  media_uploader.py
src/galeriafora/domain/: __init__.py  ai_metadata.py  content_metadata.py  content_type.py  external_media.py  external_provider_capability.py  external_provider_info.py  i_external_provider.py  i_provider_registry.py  mature_rating.py  page.py  provider_name.py
src/galeriafora/domain/exceptions/: __init__.py  cannot_create_external_media_with_description_exceeding_max_length_exception.py  cannot_create_external_media_with_empty_title_exception.py  cannot_create_external_media_with_invalid_content_metadata_exception.py  cannot_create_external_media_with_invalid_provider_exception.py  cannot_create_external_media_with_invalid_rating_exception.py  cannot_create_external_media_with_invalid_url_exception.py  cannot_create_external_media_with_title_exceeding_max_length_exception.py  cannot_create_external_media_with_too_many_tags_exception.py  cannot_create_external_provider_info_with_empty_capabilities_exception.py  cannot_create_external_provider_info_with_empty_name_exception.py  cannot_create_external_provider_info_with_invalid_capabilities_exception.py  cannot_create_page_with_has_more_true_but_no_next_cursor_exception.py  cannot_create_page_with_next_cursor_set_but_no_more_items_exception.py  cannot_create_page_with_non_boolean_has_more_exception.py  cannot_create_page_with_non_list_items_exception.py  cannot_create_page_with_non_string_next_cursor_exception.py  cannot_create_provider_name_that_normalizes_to_empty_exception.py  cannot_create_provider_name_with_empty_name_exception.py  cannot_create_provider_name_with_non_string_name_exception.py  cannot_fetch_latest_media_provider_does_not_support_fetch_latest_exception.py  cannot_fetch_latest_media_with_invalid_provider_name_exception.py  cannot_fetch_latest_media_without_registered_providers_exception.py  (+14 more)
tests/poc/: test_deviantart_fetch.py
tests/unit/application/: test_media_fetcher.py  test_media_uploader.py  test_provider_coordinator.py
tests/unit/domain/: test_ai_metadata.py  test_content_metadata.py  test_content_type.py  test_external_media.py  test_external_provider_capability.py  test_external_provider_info.py  test_mature_rating.py  test_page.py  test_provider_name.py
